--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,3 +10,12 @@ types-dataclasses>=0.6.6
 types-Deprecated>=1.2.9.2
 types-requests>=2.28.11.17
 types-tabulate>=0.9.0.2
+coverage ==7.3.1
+pytest ==7.4.0
+pytest-timeout ==2.1.0
+pytest-cov ==4.1.0
+pytest-doctestplus ==0.9.0
+pytest-asyncio ==0.21.1
+# pytest-random-order ==1.1.0
+pytest-rerunfailures ==12.0
+pytest-xdist ==3.3.1
