--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,12 @@ transformers[sentencepiece]>=4.18.0,<5.0.0
 urllib3<2.0.0,>=1.0.0  # pin below 2 to make dependency resolution faster.
 wikipedia-api>=0.5.7
 semver<4.0.0,>=3.0.0
+coverage ==7.3.1
+pytest ==7.4.0
+pytest-timeout ==2.1.0
+pytest-cov ==4.1.0
+pytest-doctestplus ==0.9.0
+pytest-asyncio ==0.21.1
+# pytest-random-order ==1.1.0
+pytest-rerunfailures ==12.0
+pytest-xdist ==3.3.1
